examples/errors/arg_type_mismatch.alan
main(): proc
    foo(x: byte): proc
    {
    }
{
    foo(42);
}